--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
   <body>
     <h2>this is the body tag. I want to ask you a question.</h2>
     <p>made some changes!</p>
-    <script>
-      var askName = prompt("what is your name?");
-      alert("Hi there, " + askName + "!");
-      var question = prompt("Can you guess what my lucky number is?")
-      console.log('hi there, '+ askName);
-      if (question == "7") {
-        alert("You guessed right, " + askName + ", congratulations!");
-      } else {
-        alert("Aw too bad, wrong guess. It was 7, good try though!");
-      }
-
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
